# glyph

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  build.bat  deploy.bat  doxide.yml  glyph.ini  glyph.project.json  mkdocs.yml  purge.bat  sonar-project.properties  test.bat  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  sonar.yml  test.yml
docs/: main.html
overrides/: main.html
scripts/: _clean_docs.py  _normalize_compile_db.py  clean_docs.py
shaders/: CompositePS.hlsl  DividePS.hlsl  FullscreenVS.hlsl  GaussianBlurPS.hlsl
skse/plugins/: glyph.ini
src/: AppearanceCopy.cpp  AppearanceFaceGen.cpp  AppearanceFormID.cpp  AppearanceTemplate.cpp  AppearanceTemplate.h  AppearanceTemplate.hpp  AppearanceTemplateInternal.h  AppearanceTemplateInternal.hpp  BadgeTextures.cpp  BadgeTextures.hpp  ConsoleCommands.cpp  ConsoleCommands.hpp  DebugOverlay.cpp  DebugOverlay.h  DebugOverlay.hpp  DepthClip.cpp  DepthClip.hpp  GameState.cpp  GameState.h  GameState.hpp  Hooks.cpp  Hooks.h  Hooks.hpp  HudCompat.cpp  HudCompat.hpp  Occlusion.cpp  Occlusion.h  Occlusion.hpp  OutfitCopy.cpp  OutfitCopy.h  OutfitCopy.hpp  PCH.h  PCH.hpp  ParticleTextures.cpp  ParticleTextures.h  ParticleTextures.hpp  ProjectManifest.cpp  ProjectManifest.hpp  RenderConstants.h  RenderConstants.hpp  (+33 more)
tests/: test_label_format.cpp  test_settings.cpp  test_utils.cpp
